--- a/index.html/index.html
+++ b/index.html/index.html
@@ -89,7 +89,7 @@
         
         <div class="backdrop-blur-card rounded-2xl w-full max-w-sm mx-auto p-6 text-center shadow-2xl">
             <img 
-                src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExZzJnb2poN2htbDV6MzF5NGZic3hwbW96eHVnY2k4c2RuNzJvbG5ydiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/GmbGy0Ro2FFevFlk8Q/giphy.gif" 
+                <img src="a1m4is.gif" ... > 
                 alt="Profile Picture" 
                 class="w-24 h-24 md:w-32 md:h-32 rounded-full mx-auto -mt-16 md:-mt-20 border-4 border-gray-800 shadow-lg object-cover"
                 onerror="this.onerror=null; this.src='https://placehold.co/128x128/333333/FFFFFF?text=Error';"
@@ -121,7 +121,7 @@
             <div class="flex items-center">
                 <button id="play-pause-btn" class="text-white text-2xl w-12 h-12 flex-shrink-0"><i class="fas fa-play"></i></button>
                 <div class="flex-grow mx-3 overflow-hidden">
-                    <audio id="music-player" src="http://googleusercontent.com/file_content/1"></audio>
+                    <audio id="music-player" src="Wolfacejoeyy - cake (Official Video).mp3"></audio
                     <p class="font-semibold truncate">cake</p>
                     <p class="text-sm text-gray-400 truncate">Wolfacejoeyy</p>
                     <progress id="music-progress-bar" value="0" max="100" class="w-full h-1 rounded-full mt-2 appearance-none"></progress>
